# game-of-life-checkboxes

./: .gitignore  CNAME  README.md  index.js  index.wasm  plant_game.cpp
.github/workflows/: build_and_publish_website.yml
macos-cmake/: CMakeLists.txt
vs2019/: plant-game.sln  plant-game.vcxproj
web/: build.sh  shell.html
